# saltOS

./: .gitignore  CMakeLists.txt  DISTRO.md  README.md  README.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  package_proposal.yml
.github/workflows/: ci.yml  installer-base.yml  installer-iso-arm64.yml  installer-iso.yml  iso.yml  lint.yml  live-iso-arm64.yml  live-iso.yml  native-base.yml  packages.yml  pi5-image.yml  selfhost-desktop.yml  selfhost-iso-arm64.yml  selfhost-iso.yml  strata.yml  vm-image-arm64.yml  vm-image-x86.yml  void-iso.yml
docs/: CONVENTIONS.md  architecture.md  contributing.md  headless-vm-ssh.md  installation.md  installer.md  native-build.md  ota.md  package-manager.md  raspberry-pi.md  recipes.md  repository.md  reproducibility.md  rollback.md  strata.md  trust-model.md  void-base.md
docs/examples/: system.lock.toml  system.toml
os/bootstrap/: README  bootstrap.sh  build-order.toml  stage-rootfs.sh
os/btrfs/: README.md  fstab.template  layout.sh  snapshot.sh
os/installer/: README  saltos-install.sh  settings-live.conf  settings.conf
os/iso/: README  build-iso.sh  live-build.sh  void-build.sh
os/ota/: publish.sh  salt-ota.sh  server.ts  ship.sh
os/pi/: ab-update.sh  build-pi5-image.sh
os/profile.d/: salt-shims.sh
os/runit/: README.md  svc
os/selfhost/: OTA.md  build-arm64.sh  build-base-grains.sh  build-installed-image.sh  build.sh  desktop.sh  kernel-aarch64.config  kernel-x86_64.config  saltos-install
os/vm/: README.md  build-arm64-vm.sh
recipes/alsa-lib/: recipe.toml
recipes/bash/: recipe.toml
recipes/bc/: recipe.toml
recipes/binutils/: recipe.toml
recipes/bison/: recipe.toml
recipes/btrfs-progs/: recipe.toml
recipes/busybox/: recipe.toml
recipes/bzip2/: recipe.toml
recipes/ca-certificates/: recipe.toml
recipes/cairo/: recipe.toml
recipes/chrony/: recipe.toml
recipes/cmake/: recipe.toml
recipes/coreutils/: recipe.toml
recipes/curl/: recipe.toml
recipes/dbus/: recipe.toml
recipes/dhcpcd/: recipe.toml
recipes/diffutils/: recipe.toml
recipes/dosfstools/: recipe.toml
recipes/dracut/: recipe.toml
recipes/e2fsprogs/: recipe.toml
recipes/efibootmgr/: recipe.toml
recipes/efivar/: recipe.toml
recipes/elfutils/: recipe.toml
recipes/eudev/: recipe.toml
recipes/expat/: recipe.toml
recipes/featherpad/: recipe.toml
recipes/file/: recipe.toml
recipes/findutils/: recipe.toml
recipes/flex/: recipe.toml
recipes/fontconfig/: recipe.toml
recipes/freetype/: recipe.toml
recipes/gawk/: recipe.toml
recipes/gcc/: recipe.toml
recipes/gettext/: recipe.toml
recipes/git/: recipe.toml
recipes/glib/: recipe.toml
recipes/glibc/: recipe.toml
recipes/gmp/: recipe.toml
recipes/gptfdisk/: recipe.toml
recipes/grep/: recipe.toml
recipes/grub/: recipe.toml
recipes/gzip/: recipe.toml
recipes/harfbuzz/: recipe.toml
recipes/helium/: recipe.toml
recipes/iproute2/: recipe.toml
recipes/iputils/: recipe.toml
recipes/kmod/: recipe.toml
recipes/less/: recipe.toml
recipes/libdrm/: recipe.toml
recipes/libffi/: recipe.toml
recipes/libfm-qt/: recipe.toml
recipes/libjpeg-turbo/: recipe.toml
recipes/liblxqt/: recipe.toml
recipes/libpng/: recipe.toml
recipes/libqtxdg/: recipe.toml
recipes/libsodium/: recipe.toml
recipes/libusb/: recipe.toml
recipes/libx11/: recipe.toml
recipes/libxcb/: recipe.toml
recipes/linux/: recipe.toml
recipes/llvm/: recipe.toml
recipes/lxqt-build-tools/: recipe.toml
recipes/lxqt-panel/: recipe.toml
recipes/lxqt-session/: recipe.toml
recipes/lzo/: recipe.toml
recipes/m4/: recipe.toml
recipes/make/: recipe.toml
recipes/menu-cache/: recipe.toml
recipes/mesa/: recipe.toml
recipes/meson/: recipe.toml
recipes/mpc/: recipe.toml
recipes/mpfr/: recipe.toml
recipes/ncurses/: recipe.toml
recipes/ninja/: recipe.toml
recipes/nspr/: recipe.toml
recipes/nss/: recipe.toml
recipes/openbox/: recipe.toml
recipes/openssh/: recipe.toml
src/halite/: CMakeLists.txt
src/halite/include/salt/: repo.h  run.h  sign.h  stratum.h  toml.h  txn.h  zst.h
src/halite/src/: archive.c  pkg.c  repo.c  run.c  sign.c  stratum.c  trust.c  util.c
src/libsalt/: CMakeLists.txt
src/libsalt/include/salt/: archive.h  db.h  hash.h  pkg.h  repo.h  tar.h  trust.h  txn.h  util.h
src/libsalt/src/: archive.c  db.c  hash.c  pkg.c  repo.c  tar.c  toml.c  trust.c  txn.c  util.c  zst.c
src/salt/: CMakeLists.txt  cli.cpp  cli.hpp  cmd_build.cpp  cmd_config.cpp  cmd_expose.cpp  cmd_install.cpp  cmd_lock.cpp  cmd_provider.cpp  cmd_query.cpp  cmd_repo.cpp  cmd_run.cpp  cmd_service.cpp  cmd_strata_sugar.cpp  cmd_stratum.cpp  cmd_trust.cpp  main.cpp
strata/: README.md  alpine.toml  arch-aarch64.toml  arch.toml  debian.toml  fedora.toml  opensuse.toml  void.toml
tests/: CMakeLists.txt  cli_smoke.cmake  test_main.c
(+96 files in other folders)
